--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,3 +19,7 @@ repositories {
 dependencies {
     implementation 'com.opencsv:opencsv:5.5.2'
 }
+
+dependencies {
+  implementation 'com.google.code.gson:gson:2.8.6'
+}
